--- a/app/src/main/res/layout/activity_reset_password_code.xml
+++ b/app/src/main/res/layout/activity_reset_password_code.xml
@@ -28,7 +28,7 @@
                 android:id="@+id/textView6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Verificación OTP"
+                android:text="Verificación por código"
                 android:gravity="center"
                 android:textSize="30dp"
                 android:textColor="@color/textColor_WithoutBg"
