--- a/app/src/main/res/layout/activity_data_register_personaldata.xml
+++ b/app/src/main/res/layout/activity_data_register_personaldata.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -8,154 +8,164 @@
     android:background="@color/gray_bkgroud"
     tools:context=".Controller.Controller_data_register_personaldata">
 
-    <FrameLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="600dp"
-        android:layout_gravity="center"
-        style="@style/BackGround_screen"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent">
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="250dp"
-            android:paddingHorizontal="20dp"
-            android:orientation="vertical">
-
-            <RelativeLayout
-                android:id="@+id/next_button_activityData_register_personaldata"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:clickable="true"
-                android:background="@drawable/background_buttongeneral_ripple">
-
-                <TextView
-                    android:id="@+id/textView11"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:textStyle="bold"
-                    android:textSize="20dp"
-                    android:textColor="@color/textColor"
-                    android:text="Siguiente" />
-            </RelativeLayout>
-        </LinearLayout>
-
-
-    </FrameLayout>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="230dp"
-        android:layout_gravity="center_horizontal"
-        app:cardCornerRadius="21dp"
-        app:cardElevation="20dp"
-        style="@style/BackGround_screen_appdata">
-
-        <FrameLayout
+        <androidx.cardview.widget.CardView
+            style="@style/BackGround_screen_appdata"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/style_appdata">
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="200dp"
+            app:cardCornerRadius="21dp"
+            app:cardElevation="20dp">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:paddingTop="5dp">
-
-                    <ImageView
-                        android:layout_width="140dp"
-                        android:layout_height="140dp"
-                        android:layout_gravity="center"
-                        android:background="@drawable/icon_register" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:gravity="center"
-                        android:fontFamily="sans-serif-medium"
-                        android:text="Registro"
-                        android:textColor="@color/textColor_WithoutBg"
-                        android:textSize="@dimen/text_title_size_sign_in"/>
-
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/style_appdata">
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginTop="20dp"
-                        android:orientation="vertical">
-                        <com.google.android.material.textfield.TextInputLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginTop="@dimen/separation_of_ET_log_in"
-                            android:hint="Nombre(s)"
-                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                            app:boxCornerRadiusTopEnd="10dp"
-                            app:boxCornerRadiusTopStart="10dp"
-                            app:hintTextColor="@color/textColor_WithoutBg">
-                            <com.google.android.material.textfield.TextInputEditText
-                                android:id="@+id/InputFirstName_activityData_register_personaldata"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:textSize="@dimen/text_size_input"
-                                />
-                        </com.google.android.material.textfield.TextInputLayout>
-                        <com.google.android.material.textfield.TextInputLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/separation_of_ET_log_in"
-                            android:layout_gravity="center"
-                            android:hint="Apellido(s)"
-                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                            app:boxCornerRadiusTopEnd="10dp"
-                            app:boxCornerRadiusTopStart="10dp"
-                            app:boxBackgroundMode="outline"
-                            app:hintTextColor="@color/textColor_WithoutBg">
-                            <com.google.android.material.textfield.TextInputEditText
-                                android:id="@+id/InputLastName_activityData_register_personaldata"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:textSize="@dimen/text_size_input"/>
-                        </com.google.android.material.textfield.TextInputLayout>
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:paddingTop="5dp">
 
-                        <com.google.android.material.textfield.TextInputLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                        <ImageView
+                            android:layout_width="140dp"
+                            android:layout_height="140dp"
                             android:layout_gravity="center"
-                            android:layout_marginTop="@dimen/separation_of_ET_log_in"
-                            android:hint="Edad"
-                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                            app:boxCornerRadiusTopEnd="10dp"
-                            app:boxCornerRadiusTopStart="10dp"
-                            app:boxBackgroundMode="outline"
-                            app:hintTextColor="@color/textColor_WithoutBg">
-                            <com.google.android.material.textfield.TextInputEditText
-                                android:id="@+id/InputAge_activityData_register_personaldata"
+                            android:background="@drawable/icon_register" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:fontFamily="sans-serif-medium"
+                            android:gravity="center"
+                            android:text="Registro"
+                            android:textColor="@color/textColor_WithoutBg"
+                            android:textSize="@dimen/text_title_size_sign_in" />
+
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginTop="20dp"
+                            android:orientation="vertical">
+
+                            <com.google.android.material.textfield.TextInputLayout
+                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:textSize="@dimen/text_size_input"
-                                android:inputType="numberDecimal"/>
-                        </com.google.android.material.textfield.TextInputLayout>
+                                android:layout_gravity="center"
+                                android:layout_marginTop="@dimen/separation_of_ET_log_in"
+                                android:hint="Nombre(s)"
+                                app:boxCornerRadiusTopEnd="10dp"
+                                app:boxCornerRadiusTopStart="10dp"
+                                app:hintTextColor="@color/textColor_WithoutBg">
+
+                                <com.google.android.material.textfield.TextInputEditText
+                                    android:id="@+id/InputFirstName_activityData_register_personaldata"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:textSize="@dimen/text_size_input" />
+                            </com.google.android.material.textfield.TextInputLayout>
+
+                            <com.google.android.material.textfield.TextInputLayout
+                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginTop="@dimen/separation_of_ET_log_in"
+                                android:hint="Apellido(s)"
+                                app:boxBackgroundMode="outline"
+                                app:boxCornerRadiusTopEnd="10dp"
+                                app:boxCornerRadiusTopStart="10dp"
+                                app:hintTextColor="@color/textColor_WithoutBg">
+
+                                <com.google.android.material.textfield.TextInputEditText
+                                    android:id="@+id/InputLastName_activityData_register_personaldata"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:textSize="@dimen/text_size_input" />
+                            </com.google.android.material.textfield.TextInputLayout>
+
+                            <com.google.android.material.textfield.TextInputLayout
+                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginTop="@dimen/separation_of_ET_log_in"
+                                android:hint="Edad"
+                                app:boxBackgroundMode="outline"
+                                app:boxCornerRadiusTopEnd="10dp"
+                                app:boxCornerRadiusTopStart="10dp"
+                                app:hintTextColor="@color/textColor_WithoutBg">
+
+                                <com.google.android.material.textfield.TextInputEditText
+                                    android:id="@+id/InputAge_activityData_register_personaldata"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:textSize="@dimen/text_size_input"
+                                    android:inputType="numberDecimal" />
+                            </com.google.android.material.textfield.TextInputLayout>
+                        </LinearLayout>
+
+
                     </LinearLayout>
 
 
-                </LinearLayout>
+            </FrameLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <RelativeLayout
+            style="@style/BackGround_screen"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="80dp"
+            android:layout_marginBottom="80dp">
 
 
-        </FrameLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="20dp"
+                android:orientation="vertical"
+                android:paddingHorizontal="20dp">
 
-    </androidx.cardview.widget.CardView>
+                <RelativeLayout
+                    android:id="@+id/next_button_activityData_register_personaldata"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/background_buttongeneral_ripple"
+                    android:clickable="true">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+                    <TextView
+                        android:id="@+id/textView11"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:text="Siguiente"
+                        android:textColor="@color/textColor"
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
+                </RelativeLayout>
+            </LinearLayout>
+
+
+        </RelativeLayout>
+    </RelativeLayout>
+
+</RelativeLayout>
