--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -9,101 +9,106 @@
     style="@style/BackGround_screen"
     tools:context=".Controller.Controller_mainActivity">
 
+
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-
-        <RelativeLayout
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="600dp"
-            android:layout_gravity="center"
-            style="@style/BackGround_screen">
+            android:layout_height="match_parent">
 
-            <LinearLayout
+            <RelativeLayout
+                style="@style/BackGround_screen"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_margin="20dp"
-                android:orientation="vertical">
-
-                <ImageView
-                    style="@style/Icon_panikaSOS"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:layout_weight="1" />
-
-                <RelativeLayout
-                    android:id="@+id/sing_in_button_activitymain"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:layout_margin="15dp"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:clickable="true"
-                    android:background="@drawable/background_buttongeneral_ripple">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:textStyle="bold"
-                        android:textSize="@dimen/text_size_sign_in"
-                        android:textColor="@color/textColor"
-                        android:text="Iniciar sesión" />
-                </RelativeLayout>
+                android:layout_height="wrap_content"
+                android:layout_gravity="center">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_weight="0"
-                    android:orientation="horizontal"
-                    android:gravity="center">
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="20dp"
+                    android:orientation="vertical">
 
-
-                    <TextView
-                        android:id="@+id/textView"
+                    <ImageView
+                        style="@style/Icon_panikaSOS"
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="0"
-                        android:fontFamily="sans-serif-black"
-                        android:gravity="center"
-                        android:textColor="@color/textColor_WithoutBg"
-                        android:text="@string/message_log_in_quest"
-                        android:textSize="@dimen/text_size_log_in" />
-
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1" />
 
                     <RelativeLayout
-                        android:id="@+id/log_in_button_activitymain"
-                        android:layout_width="140dp"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:layout_marginStart="10dp"
+                        android:id="@+id/sing_in_button_activitymain"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="15dp"
+                        android:background="@drawable/background_buttongeneral_ripple"
                         android:clickable="true"
-                        android:background="@drawable/background_button_withoutbackground_ripple">
+                        android:gravity="center"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
-                            android:textStyle="bold"
-                            android:textSize="20dp"
-                            android:textColor="@color/textColor_WithoutBg"
-                            android:text="Registrase" />
+                            android:text="Iniciar sesión"
+                            android:textColor="@color/textColor"
+                            android:textSize="@dimen/text_size_sign_in"
+                            android:textStyle="bold" />
                     </RelativeLayout>
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0"
+                        android:gravity="center"
+                        android:orientation="horizontal">
 
 
+                        <TextView
+                            android:id="@+id/textView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_weight="0"
+                            android:fontFamily="sans-serif-black"
+                            android:gravity="center"
+                            android:text="@string/message_log_in_quest"
+                            android:textColor="@color/textColor_WithoutBg"
+                            android:textSize="@dimen/text_size_log_in" />
+
+
+                        <RelativeLayout
+                            android:id="@+id/log_in_button_activitymain"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
+                            android:layout_marginStart="10dp"
+                            android:padding="10dp"
+                            android:background="@drawable/background_button_withoutbackground_ripple"
+                            android:clickable="true">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerInParent="true"
+                                android:text="Registrate"
+                                android:textColor="@color/textColor_WithoutBg"
+                                android:textSize="20dp"
+                                android:textStyle="bold" />
+                        </RelativeLayout>
+                    </LinearLayout>
                 </LinearLayout>
-
-            </LinearLayout>
-        </RelativeLayout>
+            </RelativeLayout>
+        </FrameLayout>
 
     </FrameLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
