--- a/app/src/main/res/layout/activity_qa_contact.xml
+++ b/app/src/main/res/layout/activity_qa_contact.xml
@@ -5,7 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    style="@style/BackGround_screen_menu"
     tools:context=".Controller_qa_contact">
 
     <androidx.cardview.widget.CardView
@@ -28,18 +27,21 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_margin="10dp">
 
                 <ImageView
                     android:id="@+id/imageView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/user_contact" />
+                    android:src="@drawable/user_contact"
+                    app:tint="@color/textColor_WithoutBg"/>
 
                 <TextView
                     android:id="@+id/ActionText_TextView_activityQaContact"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
                     android:textStyle="bold"
@@ -52,6 +54,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginVertical="5dp"
+                android:layout_marginHorizontal="10dp"
                 android:hint="Nombre(s)"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 app:boxCornerRadiusTopEnd="10dp"
@@ -71,6 +75,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:hint="Apellido(s)"
+                android:layout_marginVertical="5dp"
+                android:layout_marginHorizontal="10dp"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 app:boxCornerRadiusTopEnd="10dp"
                 app:boxCornerRadiusTopStart="10dp"
@@ -89,6 +95,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:hint="Apodo"
+                android:layout_marginVertical="5dp"
+                android:layout_marginHorizontal="10dp"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 app:boxCornerRadiusTopEnd="10dp"
                 app:boxCornerRadiusTopStart="10dp"
@@ -106,6 +114,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:hint="Email"
+                android:layout_marginVertical="5dp"
+                android:layout_marginHorizontal="10dp"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 app:boxCornerRadiusTopEnd="10dp"
                 app:boxCornerRadiusTopStart="10dp"
@@ -124,6 +134,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:hint="Número teléfonico"
+                android:layout_marginVertical="5dp"
+                android:layout_marginHorizontal="10dp"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 app:boxCornerRadiusTopEnd="10dp"
                 app:boxCornerRadiusTopStart="10dp"
@@ -140,21 +152,22 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
-
-
                 <Button
                     android:id="@+id/Cancel_Buttom_activityQaContact"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginVertical="5dp"
+                    android:layout_marginHorizontal="20dp"
                     android:layout_weight="1"
                     android:text="Cancelar" />
-
                 <Button
                     android:id="@+id/Save_Buttom_activityQaContact"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginVertical="5dp"
+                    android:layout_marginHorizontal="20dp"
                     android:layout_weight="1"
                     android:text="Guardar" />
             </LinearLayout>
