--- a/app/src/main/res/layout/activity_qa_main_menu.xml
+++ b/app/src/main/res/layout/activity_qa_main_menu.xml
@@ -27,17 +27,16 @@
 
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/FullNameUser_TextView_activityQaMainMenu"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_gravity="center"
-                android:layout_marginStart="60dp"
-                android:gravity="center"
-                android:textStyle="bold"
+                android:paddingHorizontal="20dp"
                 android:textColor="@color/textColor_WithoutBg"
-                android:textSize="20dp"
-                android:text="Menú" />
+                android:textSize="25dp"
+                android:layout_marginVertical="20dp"
+                android:textStyle="bold"
+                android:text="Hola," />
 
             <RelativeLayout
                 android:id="@+id/imageButton_LogOut_ActivityQaMainMenu"
@@ -70,30 +69,21 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:orientation="vertical">
-
-
-            <TextView
-                android:id="@+id/FullNameUser_TextView_activityQaMainMenu"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/textColor_WithoutBg"
-                android:textSize="25dp"
-                android:layout_marginVertical="20dp"
-                android:textStyle="bold"
-                android:text="Hola," />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:gravity="center"
+                android:layout_marginBottom="80dp"
                 android:orientation="horizontal">
 
                 <RelativeLayout
                     android:id="@+id/buttomPanika_RelativeLayout_ActivityQaMainMenu"
-                    android:layout_width="250dp"
-                    android:layout_height="250dp"
+                    android:layout_width="350dp"
+                    android:layout_height="350dp"
                     android:layout_gravity="center"
                     android:clickable="true"
                     android:background="@drawable/background_buttonsos_ripple"
@@ -102,8 +92,8 @@
 
                     <com.airbnb.lottie.LottieAnimationView
                         android:id="@+id/buttonAnimation_LottieAnimation_ActivityQaMainMenu"
-                        android:layout_width="200dp"
-                        android:layout_height="200dp"
+                        android:layout_width="380dp"
+                        android:layout_height="380dp"
                         app:lottie_autoPlay="false"
                         app:lottie_loop="true"
                         android:visibility="gone"
@@ -117,7 +107,7 @@
                         android:layout_centerInParent="true"
                         android:fontFamily="sans-serif-condensed"
                         android:textSize="30dp"
-                        android:text="PanikaSOS"
+                        android:text="Panika SOS"
                         android:textColor="@color/textColor_WithoutBg"
                         android:textStyle="bold"/>
                 </RelativeLayout>
@@ -200,16 +190,24 @@
 
                         </RelativeLayout>
                     </RelativeLayout>
-
                 </LinearLayout>
-
-
-
             </LinearLayout>
-
-
-
         </LinearLayout>
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/switch_ActivityQaMainMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:thumb="@drawable/style_switch"
+            android:text="Ubicación"
+            android:fontFamily="sans-serif-condensed"
+            android:textColor="@color/textColor_WithoutBg"
+            android:textSize="20dp"
+            app:thumbTintMode="add"
+            app:splitTrack="false"
+            app:trackTint="@color/black"
+            app:track="@drawable/style_bg_switch"
+            app:trackTintMode="add"/>
     </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
