--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="gray_bkgroud">#3A3A3A</color>
+    <color name="gray_bkgroud">#858585</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="yellow_btn_contacts">#FFE500</color>
@@ -16,13 +16,14 @@
     <color name="DownfontBackgroundDark">#2F2F2F</color>
     <color name="FloatingButton">#0066FF</color>
     <color name="PressFloatingButton">#2A79EF</color>
-    <color name="Danger">#838282</color>
+    <color name="Danger">#37FF0000</color>
     <color name="backgroundBtn">#000000</color>
     <color name="textColor">#FFFFFF</color>
     <color name="textColor_WithoutBg">#090909</color>
     <color name="pressBtn_WithoutBg">#A4393939</color>
     <color name="pressBtn">#8DFFFFFF</color>
     <!-- Color qa main menu -->
+    <color name="switch_btn">#353535</color>
     <color name="backgroundBtn_conatct">#FDBE00</color>
     <color name="backgroundBtn_conatct_under">#D5A000</color>
     <color name="backgroundBtn_map">#C1F800</color>
